@@ -3,6 +3,9 @@ Package: R.utils
 ================
 
 Version: 1.30.1 [2014-04-06]
+o Now evalCapture() utilizes deparse() to get the source code and
+  acknowledges options 'deparse.cutoff' to control the code wrapping.
+  Previously capture.output(print()) was used.
 o WORKAROUND: moveInSearchPath() redirects any messages that
   base::attach() (incorrectly?) sends to stdout to stderr.
 
